tkg-alexandria/guestbook-storageclass/scratch/ingress-rewrite.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-rewrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: contour2.tpmlab.vmware.com
    http:
      paths:
      - path: /guestbook
        backend:
          serviceName: gb-guestbook
          servicePort: 80
